# kynode-pediatric

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  ROADMAP.md  SECURITY.md  pytest.ini  railway.json
.github/workflows/: ci.yml  pages.yml
apps/local-node/: Dockerfile  README.md  pyproject.toml
apps/local-node/src/kynode_pediatric_local_node/: __init__.py  __main__.py  app.py  brief.py  models.py  service.py  storage.py
apps/local-node/src/kynode_pediatric_local_node/static/: icons.js  index.html  local-node.css  local-node.js  theme-bootstrap.js
apps/local-node/tests/: test_brief.py  test_local_node.py
badges/: coverage.json
demo/: README.md  generate_demo_data.py  index.html
demo/data/: demo-output.json
demo/static/: demo.js  i18n.js  icons.js  kynode-pediatric.css  tokens.css
docs/: architecture.md  manual-trabajador-salud.md
docs/components/: 01-pediatric-triage.md  02-anomaly-detection.md  03-growth-curves.md  04-vaccinations.md  05-imci-rules.md
docs/integrations/: ollama.es.md  ollama.md
docs/product/: local-node.md
docs/qa/: phase5-lighthouse-audit.md
docs/releases/: v0.1.0-pregrant-alpha.md  v0.2.0-prepilot-local-node.md
docs/user-guide/: local-node.es.md  local-node.md
scripts/: sync-design-system.sh  update_coverage_badge.py
tests/: test_demo_design_system.py  test_phase5_performance_contracts.py  test_readme_integrity.py
